--- a/Пельмени/single-category.html
+++ b/Пельмени/single-category.html
@@ -99,6 +99,10 @@ alt="Item">
 <div class="menu-item-tile col-md-6">
 <div class="row">
 <div class="col-sm-5">
+  <div id="my-store-43342018"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?43342018&data_platform=code&data_date=2020-12-16" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-43342018");</script>
+</div>
 
 <div class="menu-item-photo">
 <div>D01</div>
